[package]
edition = "2018"
name = "fdb"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
async-std = {version = "1.10.0", features = ["attributes"]}
chrono = "0.4.19"
clap = {version = "3.1.0", features = ["derive"]}
foundationdb = "0.5"
futures = "0.3"
nom = "7.1"
serde = "1.0.126"
uuid = {version = "0.8", features = ["v4"]}
