[package]
edition = "2018"
name = "fdbchat"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
async-std = {version = "1.10.0", features = ["attributes"]}
chrono = "0.4.19"
clap = {version = "3.1.0", features = ["derive"]}
env_logger = "0.9.0"
foundationdb = "0.5"
futures = "0.3"
libc = "0.2.111"
log = "0.4.14"
serde = "1.0.126"
signal-hook = "0.3.9"
signal-hook-async-std = "0.2.2"
uuid = {version = "0.8", features = ["v4"]}
